--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- User facing -->
-    <title>Jalapeno Labs AI</title>
+    <title>Seraphim | Jalapeno Labs</title>
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
   </head>
   <body>
