--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <!-- Page setup -->
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html class="dark" lang="en-US">
 
-    <!-- User facing -->
-    <title>Seraphim | Jalapeno Labs</title>
-    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <!-- Page setup -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- User facing -->
+  <title>Seraphim | Jalapeno Labs</title>
+  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
