--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
   <!-- User facing -->
   <title>Seraphim | Jalapeno Labs</title>
-  <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+  <link rel="icon" type="image/png" href="/logo.png" />
 </head>
 
 <body>
